# Cybersecurity

./: .env.example  .gitignore  API_CONTRACTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DEMO_GUIDE.md  E2E_QUICKSTART.md  E2E_STATUS.md  E2E_TEST_RUN_RESULTS.md  README.md  RESPONSIBLE_USE.md  SECURITY.md  TERMS_OF_USE.md  VERIFICATION.md  demo.py  docker-compose.yml  run_e2e_tests.sh
.github/workflows/: ci-cd.yml  deploy-production.yml
brain/: Dockerfile  pyproject.toml
brain/src/cyper_brain/: __init__.py  celery_app.py  main.py
brain/src/cyper_brain.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
brain/src/cyper_brain/ai/: agent.py  results_analyzer.py  scan_planner.py
brain/src/cyper_brain/analytics/: __init__.py  product_analytics.py
brain/src/cyper_brain/api/: analytics_handler.py
brain/src/cyper_brain/integrations/: __init__.py  notifications.py  webhooks.py
brain/src/cyper_brain/notifications/: __init__.py  email_service.py
brain/src/cyper_brain/onboarding/: __init__.py  email_verification.py
brain/src/cyper_brain/reporting/: generator.py
brain/src/cyper_brain/reporting/templates/: base.html  executive_summary.html  technical_details.html
brain/src/cyper_brain/scanners/: __init__.py  zap_scanner.py
brain/src/cyper_brain/tasks/: scan_tasks.py
brain/src/cyper_brain/tools/: sqli_tester.py  xss_tester.py  zap_scanner.py
brain/src/cyper_brain/vulnerability/: __init__.py  cve_service.py
brain/tests/: test_cve_service.py  test_email_notifications.py  test_zap_scanner.py
core/: Cargo.toml  Dockerfile
core/src/: main.rs
core/src/crypto/: hash_crack.rs  mod.rs
core/src/network/: mod.rs  port_scanner.rs
core/src/packet/: capture.rs  mod.rs
core/src/wifi/: interface_manager.rs  mod.rs  scanner.rs
dashboard/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css  router.tsx
dashboard/src/pages/: Dashboard.tsx  Login.tsx
dashboard/src/services/: api.ts  websocket.ts
dashboard/src/store/: authStore.ts
dashboard/src/utils/: cn.ts
database/: schema.sql
database/migrations/: 001_add_multi_tenancy.sql  002_add_audit_signing.sql
docs/: API_DOCUMENTATION.md  CI_CD.md  E2E_AUTOMATION.md  E2E_CLEANUP_GUARANTEES.md  E2E_TESTING_GUIDE.md  IMPLEMENTATION_PLAN.md  KNOWLEDGE_BASE.md  TESTING.md  TEST_RESULTS.md  USER_GUIDE.md  VISUAL_ONBOARDING_GUIDE.md
e2e_tests/: conftest.py  pytest.ini  seed_data.py  test_platform.py
gateway/: go.mod  go.sum
gateway/cmd/server/: main.go
gateway/deployments/: Dockerfile
gateway/internal/api/: audit_handler.go  auth_handler.go  organization_handler.go  report_handler.go
k8s/: celery-worker.yaml
scripts/: init-db.sh  quickstart.sh  setup.sh  test.sh
(+30 files in other folders)
