[package]
name = "cyper-core"
version = "0.1.0"
edition = "2021"
authors = ["Cyper Security Team"]
description = "High-performance security scanning engine"
license = "Proprietary"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Networking & Packet Processing
pnet = "0.34"
pcap = "1.1"
socket2 = "0.5"

# Parallelism
rayon = "1.8"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
openssl = "0.10"
sha2 = "0.10"
aes = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for API communication)
reqwest = { version = "0.11", features = ["json"] }

# Configuration
config = "0.13"
dotenv = "0.15"

# CLI arguments
clap = { version = "4.4", features = ["derive"] }

# WiFi specific
wireless = "0.2"

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "cyper-core"
path = "src/main.rs"
